various classname changes, documented the engine a bit